radio buttons alignment issue fixed

--- a/frontend/src/Survey.css
+++ b/frontend/src/Survey.css
@@ -293,7 +293,7 @@
   width: 100%;
   margin: 0;
   left: 50%;
-  transform: translate(-25%, 0);
+  transform: translate(-40%, 0);
   justify-content: center;
   align-items: center;
   position: relative;
